Fixed overflow-x

--- a/desktop.css
+++ b/desktop.css
@@ -179,7 +179,7 @@
 
   .square-teal-second {
     bottom: 5%;
-    right: -10px;
+    right: -3px;
   }
 
   .square-crimson {
